# taller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.txt  wwq
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
DEVELOP/: BUGS.txt  FEATURES.txt  IMPLEMENTAR_TP3.txt  PROBLEMAS_VISUALES.txt  SUPERVISION.txt  TENER_EN_CUENTA.txt
DEVELOP/animaciones_sprites/: animaciones_y_fotos_pedidas.txt
DEVELOP/sonidos/: sonidos.txt
DEVELOP/tests/: test_desconexion_y_login_combinados_USAR_ESTE.txt  tests_conexion_desconexion.txt  tests_loggerMenu.txt  tests_modelo_jugabilidad.txt
cmake/: FindSDL2.cmake
configs/: 2p.xml  2p_no_entities.xml  4p.xml  credentials.xml  custom.xml  default.xml  sp.xml  sp_no_enemies.xml  sp_no_entities.xml
configs (copy)/: 2p_no_entities.xml  custom.xml
include/: tinyxml2.h
src/: Controller.cpp  Controller.h  Displayable.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  LevelBuilder.cpp  LevelBuilder.h  Logger.cpp  Logger.h  Scenario.cpp  Scenario.h  TextureManager.cpp  Updateable.h  appearance.cpp  appearance.h  background.cpp  background.h  barrel.cpp  barrel.h  character.cpp  character.h  cody.cpp  cody.h  dropped text.txt  enemy.cpp  enemy.h  entity.cpp  entity.h  event_handler.cpp  event_handler.h  events.cpp  events.h  far_background.cpp  far_background.h  game.cpp  game.h  game_component.cpp  game_object.h  (+17 more)
src/Axel/: a_tener_en_cuenta_taller  subtareas
src/LogLib/: DebugLogger.cpp  DebugLogger.h  ErrorLogger.cpp  InfoLogger.cpp  InfoLogger.h  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h  testLogger.cpp
src/OLD/: LevelBuilder.cpp  TextureManager.cpp  TextureManager.h  background.cpp  events.cpp  game_component.cpp  game_component.h  testLogger.cpp
src/Sprites/: DceRtmHXcAAA07z.jpg_large
src/XMLparser/: xmlparser.cpp  xmlparser.h
src/XMLparser/config/: EntityConfig.h  ScoreConfig.h  Sounds.h  UtilityConfig.h  WeaponConfig.h  bindings.h  characterxml.h  config.h  gameplay.h  level.h  npc.h  utilities.h  weapon.h  weapons.h
src/credentials/: Credentials.h
src/entities/: Background.cpp  Background.h  Barrel.cpp  Barrel.h  Box.cpp  Box.h  Character.cpp  Character.h  Enemy.cpp  Enemy.h  FinalBoss.cpp  FinalBoss.h  Knife.cpp  Knife.h  Life.cpp  Life.h  Score.cpp  Score.h  Screen.cpp  Screen.h  Tube.cpp  Tube.h
src/entities/components/: Attack.cpp  Attack.h  AttackingBehavior.cpp  AttackingBehavior.h  Damage.cpp  Damage.h  EnemyBehaviorType.h  IA.cpp  IA.h  IAComponent.cpp  ID.cpp  ID.h  InputPoller.cpp  InputPoller.h  NullWill.cpp  NullWill.h  PatrolBehavior.cpp  PatrolBehavior.h  Physics.cpp  Physics.h  Point.cpp  Point.h  Position.cpp  Position.h  PursuitBehavior.cpp  PursuitBehavior.h  ScreenPosition.cpp  ScreenPosition.h  SendableGenerator.cpp  SendableGenerator.h  Sound.cpp  Sound.h  State.cpp  State.h  Will.cpp  Will.h
src/entities/components/SoundHierarchy/: BarrelSound.cpp  BarrelSound.h  BoxSound.cpp  (+11 more)
src/entities/entityHierarchy/: AnimatedEntity.cpp  AnimatedEntity.h  Entity.cpp  Entity.h  InanimatedEntity.cpp  InanimatedEntity.h  PhysicalEntity.cpp  PhysicalEntity.h  PositionalEntity.cpp  PositionalEntity.h  UnanimatedEntity.cpp  UnanimatedEntity.h  Utillity.cpp  Utillity.h  Weapon.cpp  Weapon.h
src/enumerates/: Action.h  AttackCode.h  Color.h  MessageId.h  Sprite.h
src/game/: Action.h  Background.cpp  Background.h  BackgroundRenderComponent.cpp  BackgroundRenderComponent.h  CameraComponent.cpp  CameraComponent.h  CameraPositionComponent.cpp  CameraPositionComponent.h  CharacterLevelLimits.h  CharacterRenderComponent.cpp  CharacterRenderComponent.h  CollitionManager.cpp  CollitionManager.h  Component.h  Controller.cpp  Controller.h  Displayable.h  ECS.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameObjectType.h  GameServer.cpp  GameServer.h  GraphicsComponent.cpp  GraphicsComponent.h  Header.h  IAComponent.cpp  IAComponent.h  IDComponent.cpp  IDComponent.h  IDPlayer.cpp  IDPlayer.h  Input.h  (+52 more)
src/game/Components/: IAComponent.h  IDComponent.cpp  IDComponent.h  InputComponent.cpp  InputComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PositionComponent.cpp  PositionComponent.h  StateComponent.h
src/image/: Rect.cpp  Rect.h  TextureWrapper.cpp  TextureWrapper.h
src/logger/: ErrorLogger.cpp  ErrorLogger.h  LogManager.cpp  LogManager.h  Logger.cpp
src/net/: Client.cpp  Client.h  Server.cpp  Server.h  UserConnection.cpp  UserConnection.h  server
src/net/messaging/: IDManager.cpp  IDManager.h  MessageParser.cpp  MessageParser.h  ObjectSerializer.cpp  ObjectSerializer.h  Renderable.cpp  Renderable.h  Sendable.cpp  Sendable.h  Soundable.cpp  Soundable.h  ToClientPack.h  User.h
src/parser/: CLIArgumentParser.cpp  CLIArgumentParser.h  xmlparser.cpp  xmlparser.h
src/parser/config/: barrels.h  bindings.h  boxes.h  character.h  characterxml.h  config.h  gameplay.h  level.h  npc.h  screenresolution.h  utilities.h  utility.h  weapon.h  weapons.h
src/parser/credentials/: UserCredentials.h
src/probandoCosas/: CMakeLists.txt
src/server/: Client.cpp  Client.h  Server.cpp  Server.h  UserConnection.cpp  UserConnection.h
src/sound/: SoundWrapper.cpp  SoundWrapper.h  s.cpp  s.h
src/test/: main.cpp
src/testThreads/: A.cpp  A.h  CMakeLists.txt  main.cpp
src/testeandoSockets/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  main.cpp
src/time/: TimeUtils.cpp  TimeUtils.h
src/to_remove_or_modify/: CameraComponent.cpp  CharacterLevelLimits.cpp  CharacterLevelLimits.h  LevelBuilder.cpp  LevelBuilder.h  LevelLimits.cpp  LevelLimits.h  LoggerMenu.cpp  LoggerMenu.h  Manager.cpp  Manager.h  NonCharacterLevelLimits.cpp  NonCharacterLevelLimits.h
src/utils/: ImageUtils.cpp  ImageUtils.h  MapUtils.h  ResourcesUtils.h
(+77 files in other folders)
